# cocode

./: .cocode_gh_issues.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .tmp_issue_29_body.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: README.md  development-setup.md  log-streaming-implementation.md
docs/adr/: 005-performance-scalability-targets.md  ADR-004-security-model.md
docs/adrs/: adr-001-tui-framework.md  adr-002-cli-framework.md  adr-003-agent-communication-protocol.md  adr-004-security-model.md  adr-005-performance-scalability-targets.md
docs/architecture/: agent-protocol.md  system-overview.md
examples/: log_streaming_demo.py  ready_watcher_demo.py
prototypes/: README.md  requirements.txt
prototypes/rich_prototype/: rich_demo.py
prototypes/textual_prototype/: textual_demo.py
scripts/: check-ci.sh
src/cocode/: __init__.py  __main__.py
src/cocode/agents/: __init__.py  base.py  claude_code.py  codex_cli.py  concurrent_executor.py  default.py  discovery.py  factory.py  lifecycle.py  ready_watcher.py  runner.py
src/cocode/cli/: clean.py  doctor.py  init.py  run.py  status.py
src/cocode/config/: __init__.py  manager.py  state.py
src/cocode/git/: __init__.py  repository.py  sync.py  worktree.py
src/cocode/github/: __init__.py  auth.py  issues.py  repository.py
src/cocode/tui/: __init__.py  agent_panel.py  app.py  confirm_quit.py  header.py  help_overlay.py  overview_panel.py  panels.py
src/cocode/utils/: __init__.py  dependencies.py  dry_run.py  exit_codes.py  logging.py  subprocess.py  tempfile_manager.py  validation.py
tests/: __init__.py  conftest.py
tests/integration/: test_concurrent_executor_integration.py
tests/unit/: test_agent_discovery.py  test_agents.py  test_cli.py  test_concurrent_executor.py  test_concurrent_executor_improvements.py  test_concurrent_executor_simple.py  test_config_manager.py  test_dependencies.py  test_dry_run.py  test_git_operations.py  test_github_auth.py  test_issues.py  test_logging_utils.py  test_main_entry.py  test_repository.py  test_run_command.py  test_security.py  test_sync.py  test_validation_utils.py
tests/unit/agents/: test_agent_config.py  test_claude_code.py  test_codex_cli.py  test_default.py  test_factory.py  test_lifecycle.py  test_ready_watcher.py  test_runner.py
tests/unit/cli/: test_clean_command_behavior.py  test_doctor_command_behavior.py  test_init.py
tests/unit/config/: test_state.py
tests/unit/git/: test_repository.py  test_sync.py  test_worktree.py
tests/unit/tui/: test_app.py  test_header.py  test_keyboard_shortcuts.py  test_log_streaming.py  test_split_pane.py
tests/unit/utils/: test_subprocess.py  test_tempfile_manager.py
